--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 ENV=dev
 
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=pg
 POSTGRES_PORT=5432
 POSTGRES_DB_INSTANCE=postgres
 POSTGRES_USERNAME=postgres_dev
