--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
 		"compile": "tsc --build",
 		"compile:watch": "tsc --build --watch",
 		"dev": "NODE_ENV=dev nodemon --experimental-modules --es-module-specifier-resolution=node",
-		"build:dev": "concurrently --kill-others \"yarn compile\" && NODE_ENV=dev nodemon --experimental-modules --es-module-specifier-resolution=node"
+		"build:dev": "concurrently --kill-others \"pnpm compile\" && NODE_ENV=dev nodemon --experimental-modules --es-module-specifier-resolution=node"
 	},
 	"engines": {
-		"node": "16"
+		"node": "18",
+		"pnpm": ">=8"
 	},
 	"dependencies": {
 		"axios": "^1.2.2",
@@ -23,9 +24,10 @@
 		"cron": "^2.1.0",
 		"express": "^4.18.2",
 		"helmet": "^6.0.1",
-		"postgres": "^3.3.3",
 		"morgan": "^1.10.0",
-		"zod": "^3.20.2"
+		"postgres": "^3.3.3",
+		"zod": "^3.20.2",
+		"dotenv": "^16.0.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.17.5",
@@ -45,12 +47,11 @@
 		"babel-loader": "^8.2.3",
 		"babel-plugin-source-map-support": "^2.1.3",
 		"concurrently": "^7.6.0",
-		"dotenv": "^16.0.0",
 		"eslint": "^8.10.0",
 		"eslint-plugin-promise": "^6.0.0",
 		"husky": "^4.3.8",
 		"lint-staged": "^12.3.4",
-		"nodemon": "^2.0.20",
+		"nodemon": "^3.0.1",
 		"prettier": "^2.5.1",
 		"typescript": "4.5.5"
 	},
