chore: user render postgres

--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,7 @@
 ENV=dev
 
-POSTGRES_HOST=pg
+POSTGRES_HOST=dpg-cjifginjbvhs739f3dag-a.singapore-postgres.render.com
 POSTGRES_PORT=5432
-POSTGRES_DB_INSTANCE=postgres
+POSTGRES_DB_INSTANCE=test_yw6y
 POSTGRES_USERNAME=postgres_dev
-POSTGRES_PASSWORD=postgres-dev
+POSTGRES_PASSWORD=Rf4LPCN3SVTmrbuSwuMJLVeOz4ooL1Wc
